--- a/Views/Tickets/Details.cshtml
+++ b/Views/Tickets/Details.cshtml
@@ -19,7 +19,7 @@
     <div class="col-5">
         <div class="card">
             <div class="card-header bg-dark">
-                Ticket Details
+                Ticket #@Model.Id Details
             </div>
 
             <div class="card-body">
