--- a/Views/Projects/Index.cshtml
+++ b/Views/Projects/Index.cshtml
@@ -39,7 +39,7 @@
                                 </div>
                                 <a asp-controller="Projects" asp-action="Index" class="btn btn-secondary">Cancel</a>
 
-                                <input type="submit"  value="Create new Porject" class="btn btn-success float-left mr-2">
+                                <input type="submit"  value="Create new Project" class="btn btn-success float-left mr-2">
                             }
                             else
                             {
@@ -58,7 +58,7 @@
                                 </div>
                                
 
-                                <input type="submit" disabled value="Create new Porject" class="btn btn-success float-left mr-2">
+                                <input type="submit" disabled value="Create new Project" class="btn btn-success float-left mr-2">
                             }
 
 
