--- a/Views/Projects/Details.cshtml
+++ b/Views/Projects/Details.cshtml
@@ -410,10 +410,15 @@
                             <div class="col">
                                 <p class="text-sm">
                                     Project Leader
-                                    @{ 
+                                    @{
                                         var projectManager = await projectService.ProjectManagerOnProjectAsync(Model.Id);
+
+
                                     }
-                                    <b class="d-block">@(projectManager.FullName)</b>
+                                    @if (projectManager != null)
+                                    {
+                                        <b class="d-block">@(projectManager.FullName)</b>
+                                    }
                                 </p>
                             </div>
                         </div>
