--- a/Views/Companies/Edit.cshtml
+++ b/Views/Companies/Edit.cshtml
@@ -15,7 +15,7 @@
             <form asp-action="Edit">
                 <div class="card card-primary">
                     <div class="card-header">
-                        <h3 class="card-title">Edit Ticket</h3>
+                        <h3 class="card-title">Edit Company</h3>
                     </div>
                     <div class="card-body">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
