--- a/Views/Companies/Index.cshtml
+++ b/Views/Companies/Index.cshtml
@@ -78,8 +78,80 @@
                                             @Html.DisplayFor(modelItem => item.Description)
                                         </td>
                                         <td class="project-actions text-right">
-                                            <a class="btn btn-info btn-sm mb-1" asp-action="Edit" asp-route-id="@item.Id"><i class="fas fa-pencil-alt"></i> Edit</a>
-                                            <a class="btn btn-danger btn-sm mb-1" asp-action="Delete" asp-route-id="@item.Id"><i class="fas fa-trash"></i> Delete</a>
+                                            <!-- Button trigger modal -->
+                                            <button type="button" class="btn btn-info btn-sm mb-1" data-toggle="modal" data-target="#exampleModal2-@item.Id">
+                                                <i class="fas fa-pencil-alt"></i> Edit
+                                            </button>
+
+                                            <!-- Modal -->
+                                            <div class="modal fade" id="exampleModal2-@item.Id" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2-@item.Id" aria-hidden="true">
+                                                <div class="modal-dialog modal-dialog-centered" role="document">
+                                                    <div class="modal-content">
+                                                        <div class="modal-body p-0">
+                                                            <form asp-action="Edit" method="post">
+                                                                <div class="card card-primary  mb-0">
+                                                                    <div class="card-header">
+                                                                        <h3 class="card-title">Edit Company</h3>
+                                                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                                            <span aria-hidden="true">&times;</span>
+                                                                        </button>
+                                                                    </div>
+                                                                    <div class="card-body text-left">
+                                                                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                                                        <input type="hidden" name="Id" value="@item.Id" />
+                                                                        <div class="form-group">
+                                                                            <label  class="control-label"></label>
+                                                                            <input name="Name" value="@item.Name" class="form-control" />
+                                                                        </div>
+                                                                        <div class="form-group">
+                                                                            <label  class="control-label"></label>
+                                                                            <input name="Description" value="@item.Description" class="form-control" />
+                                                                        </div>
+
+                                                                        <div class="form-group">
+                                                                            <input type="submit" value="Save" class="btn btn-success float-left mr-2">
+                                                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                                                        </div>
+
+                                                                    </div>
+                                                                    <!-- /.card-body -->
+                                                                </div>
+                                                                <!-- /.card -->
+                                                            </form>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+
+
+                                            <!-- Button trigger modal -->
+                                            <button type="button" class="btn btn-danger btn-sm mb-1" data-toggle="modal" data-target="#exampleModal-@item.Id">
+                                                <i class="fas fa-trash"></i> Delete
+                                            </button>
+
+                                            <!-- Modal -->
+                                            <div class="modal fade" id="exampleModal-@item.Id" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel-@item.Id" aria-hidden="true">
+                                                <div class="modal-dialog modal-dialog-centered" role="document">
+                                                    <div class="modal-content">
+                                                        <div class="modal-header">
+                                                            <h5 class="modal-title" id="exampleModalLabel-@item.Id">Delete Company</h5>
+                                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                                <span aria-hidden="true">&times;</span>
+                                                            </button>
+                                                        </div>
+                                                        <div class="modal-body">
+                                                            <p class="text-danger text-left">Are you sure you want to delete company @item.Name ?</p>
+                                                            <form asp-action="Delete" method="post">
+                                                                <input type="hidden" name="Id" value="@item.Id" />
+                                                                <input type="submit" value="Yes, I want to Delete" class="btn btn-danger mr-2">
+                                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">No, I don't</button>
+                                                            </form>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+
                                         </td>
                                     </tr>
                                 }                          
